--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,119 +1,59 @@
-name: Build, extract binary and deploy to Raspberry Pi
+name: Build & Deploy to Raspberry Pi
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-env:
-  IMAGE_TAG: ahmet090909/iot-led-pipeline:${{ github.sha }}
-  CONTAINER_NAME: build-temp-container
-  BINARY_NAME: mybinary
-  BINARY_PATH_IN_IMAGE: /app/mybinary
-  REMOTE_DEST_PATH: /home/${{ secrets.PI_USER }}/mybinary
-  TMUX_SESSION: app-session
+    branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+    # 1️⃣ Checkout code
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up QEMU (for emulation)
-        uses: docker/setup-qemu-action@v2
+    # 2️⃣ Start Tailscale (GitHub → Pi netwerk)
+    - name: Setup Tailscale
+      uses: tailscale/github-action@v2
+      with:
+        authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    # 3️⃣ Build in Docker (zelfde env als Pi)
+    - name: Build Docker image
+      run: |
+        docker build -t pi-build .
 
-      - name: Build ARM image and load into runner (single-platform, no-cache)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          no-cache: true
-          platforms: linux/arm64
-          tags: ${{ env.IMAGE_TAG }}
-          build-args: |
-            CACHEBUST=${{ github.run_id }}
+    # 4️⃣ Compile + extract executable
+    - name: Compile and extract binary
+      run: |
+        docker create --name build_container pi-build
+        docker cp build_container:/app/led_app ./led_app
+        docker rm build_container
+        chmod +x led_app
 
-      - name: Create container from image
-        run: |
-          if ! docker image inspect "${{ env.IMAGE_TAG }}" >/dev/null 2>&1; then
-            IMG=$(docker images -q | head -n1)
-            docker create --name "${{ env.CONTAINER_NAME }}" "$IMG"
-          else
-            docker create --name "${{ env.CONTAINER_NAME }}" "${{ env.IMAGE_TAG }}"
-          fi
+    # 5️⃣ SSH key installeren
+    - name: Setup SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.PI_SSH_KEY }}" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+        ssh-keyscan ${{ secrets.PI_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Copy executable out of container
-        run: |
-          set -e
-          docker cp "${{ env.CONTAINER_NAME }}:${{ env.BINARY_PATH_IN_IMAGE }}" ./${{ env.BINARY_NAME }}
-          chmod +x ./${{ env.BINARY_NAME }}
-          ls -la ./${{ env.BINARY_NAME }}
+    # 6️⃣ Kopieer executable naar Pi
+    - name: Copy binary to Raspberry Pi
+      run: |
+        scp led_app \
+          ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }}:${{ secrets.PI_APP_DIR }}/led_app.new
 
-      - name: Remove temporary container
-        if: always()
-        run: docker rm -f "${{ env.CONTAINER_NAME }}" || true
-
-      - name: Prepare SSH private key
-        run: |
-          # write private key from secret reliably (preserves newlines)
-          printf '%s\n' "${{ secrets.PI_SSH_PRIVATE_KEY }}" > private_key
-          chmod 600 private_key
-
-      - name: Debug network reachability to PI (prints info)
-        run: |
-          echo "Runner hostname: $(hostname)"
-          echo "Runner public IP (if any):"; curl -s ifconfig.me || true
-          echo "Resolving PI_HOST: ${{ secrets.PI_HOST }}"
-          nslookup "${{ secrets.PI_HOST }}" || true
-          echo "Ping (4) to PI_HOST:"
-          ping -c 4 "${{ secrets.PI_HOST }}" || true
-          PORT=${{ secrets.PI_SSH_PORT || '22' }}
-          echo "TCP test to PI_HOST:$PORT with nc (if available):"
-          which nc >/dev/null 2>&1 && nc -vz -w 5 "${{ secrets.PI_HOST }}" "$PORT" || echo "nc not available or connect failed"
-          echo "SSH quick attempt (10s timeout):"
-          ssh -o ConnectTimeout=10 -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -i private_key -p "$PORT" "${{ secrets.PI_USER }}"@"${{ secrets.PI_HOST }}" "echo CONNECTED" || true
-
-      - name: Add Pi host to known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          if [ -n "${{ secrets.PI_SSH_PORT }}" ]; then
-            ssh-keyscan -p "${{ secrets.PI_SSH_PORT }}" -H "${{ secrets.PI_HOST }}" >> ~/.ssh/known_hosts || true
-          else
-            ssh-keyscan -H "${{ secrets.PI_HOST }}" >> ~/.ssh/known_hosts || true
-          fi
-          chmod 644 ~/.ssh/known_hosts
-
-      - name: Copy binary to Raspberry Pi (with retries & timeout)
-        run: |
-          set -euo pipefail
-          PORT=${{ secrets.PI_SSH_PORT || '22' }}
-          DEST="${{ secrets.PI_USER }}@${{ secrets.PI_HOST }}:${{ env.REMOTE_DEST_PATH }}"
-          attempt=1
-          until [ $attempt -gt 3 ]; do
-            echo "scp try #$attempt..."
-            scp -o ConnectTimeout=10 -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -P "$PORT" -i private_key ./${{ env.BINARY_NAME }} "$DEST" && break
-            attempt=$((attempt+1))
-            echo "scp failed, retrying in 5s..."
-            sleep 5
-          done
-          if [ $attempt -gt 3 ]; then
-            echo "scp failed after 3 attempts"
-            exit 1
-          fi
-
-      - name: Restart binary on Raspberry Pi inside tmux
-        run: |
-          PORT=${{ secrets.PI_SSH_PORT || '22' }}
-          SSH_OPTS="-o ConnectTimeout=10 -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -i private_key"
-          ssh $SSH_OPTS -p "$PORT" "${{ secrets.PI_USER }}"@"${{ secrets.PI_HOST }}" \
-            "set -e; \
-             tmux kill-session -t '${{ env.TMUX_SESSION }}' || true; \
-             if [ -f '${{ env.REMOTE_DEST_PATH }}' ]; then mv '${{ env.REMOTE_DEST_PATH }}' '${{ env.REMOTE_DEST_PATH }}.bak'; fi; \
-             chmod +x '${{ env.REMOTE_DEST_PATH }}' || true; \
-             tmux new -d -s '${{ env.TMUX_SESSION }}' '${{ env.REMOTE_DEST_PATH }}'"
+    # 7️⃣ Stop oude app & start nieuwe (tmux)
+    - name: Restart app on Raspberry Pi
+      run: |
+        ssh ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }} << 'EOF'
+        mkdir -p ~/iot
+        pkill -f led_app || true
+        mv ~/iot/led_app.new ~/iot/led_app
+        chmod +x ~/iot/led_app
+        tmux kill-session -t led_app || true
+        tmux new-session -d -s led_app "~/iot/led_app"
+        EOF
