--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Copy binary to Raspberry Pi
         run: |
-         s PORT=${{ ecrets.PI_SSH_PORT || '22' }}
+         s PORT=${{ secrets.PI_SSH_PORT || '22' }}
           scp -P "$PORT" -i private_key -o StrictHostKeyChecking=yes ./${{ env.BINARY_NAME }} ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }}:${{ env.REMOTE_DEST_PATH }}
 
       - name: Restart binary on Raspberry Pi inside tmux
