--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,10 +78,17 @@ jobs:
           fi
           chmod 644 ~/.ssh/known_hosts
 
-      - name: Copy binary to Raspberry Pi
-        run: |
-         s PORT=${{ secrets.PI_SSH_PORT || '22' }}
-          scp -P "$PORT" -i private_key -o StrictHostKeyChecking=yes ./${{ env.BINARY_NAME }} ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }}:${{ env.REMOTE_DEST_PATH }}
+- name: Copy binary to Raspberry Pi
+  run: |
+    PORT=${{ secrets.PI_SSH_PORT }}
+    [ -z "$PORT" ] && PORT=22
+
+    scp -P "$PORT" \
+      -i private_key \
+      -o StrictHostKeyChecking=yes \
+      ./${{ env.BINARY_NAME }} \
+      ${{ secrets.PI_USER }}@${{ secrets.PI_HOST }}:${{ env.REMOTE_DEST_PATH }}
+
 
       - name: Restart binary on Raspberry Pi inside tmux
         run: |
